# gl-examples

./: .gitignore  CMakeLists.txt
PrimitiveFunction/GL_Lines/: CMakeLists.txt  main.cpp
PrimitiveFunction/GL_Polygon/: CMakeLists.txt  main.cpp
PrimitiveFunction/GL_Quad_Strip/: CMakeLists.txt  main.cpp
PrimitiveFunction/GL_Quads/: CMakeLists.txt  main.cpp
PrimitiveFunction/GL_Triangle_Fan/: CMakeLists.txt  main.cpp
PrimitiveFunction/GL_Triangle_Strip/: CMakeLists.txt  main.cpp
PrimitiveFunction/GL_Triangles/: CMakeLists.txt  main.cpp
VertexArray/Optimize/: CMakeLists.txt  main.cpp
VertexArray/Original/: CMakeLists.txt  main.cpp
